--- a/hikehub/package.json
+++ b/hikehub/package.json
@@ -6,11 +6,14 @@
     "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.36",
     "@mui/material": "^5.15.10",
+    "@mui/system": "^5.15.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.2",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
