--- a/hikehub/package.json
+++ b/hikehub/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.36",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/system": "^5.15.9",
     "@testing-library/jest-dom": "^5.17.0",
