--- a/hikehub/package.json
+++ b/hikehub/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "npm": "^10.4.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
