--- a/hikehub/package.json
+++ b/hikehub/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.2",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
+    "hamburger-react": "^2.5.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "npm": "^10.4.0",
@@ -30,9 +31,11 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
